deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: xray
  name: xray
  namespace: production
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: xray
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: xray
    spec:
      containers:
      - image: teddysun/xray
        imagePullPolicy: Always
        name: xray
        ports:
        - containerPort: 10080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/xray
          name: config-vol
        - mountPath: /etc/tls
          name: jokey-xyz-secret-tls
      dnsPolicy: Default
      nodeSelector:
        region: us
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: config.json
            path: config.json
          name: xray-config
        name: config-vol
      - name: jokey-xyz-secret-tls
        secret:
          secretName: jokey-xyz-secret-tls
          items:
          - key: tls.crt 
            path: tls.crt
          - key: tls.key
            path: tls.key
