svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: xray
  namespace: production
spec:
  selector:
    app: xray
  ports:
    - protocol: TCP
      port: 10080
      targetPort: 10080
